--- a/homepage/templates/homepage/join.html
+++ b/homepage/templates/homepage/join.html
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <td>비밀번호 재확인<br>
-                    <input type="text" name="re_user_pwd" id="re_user_pwd"></td>
+                    <input type="password" name="re_user_pwd" id="re_user_pwd"></td>
                 <br>
             </tr>
             <tr>
