--- a/homepage/templates/homepage/main.html
+++ b/homepage/templates/homepage/main.html
@@ -7,6 +7,7 @@
 <body>
     <h3>Main</h3>
     <h5><a href="{% url 'join_agree' %}">회원가입</a></h5>
+    <h5><a href="{% url 'login' %}">로그인</a></h5>
 
 </body>
 </html>
