--- a/homepage/templates/homepage/login.html
+++ b/homepage/templates/homepage/login.html
@@ -8,10 +8,17 @@
 <form method="post">
     {% csrf_token %}
     아이디 <input type="text" name="user_id"><br>
-    비밀번호 <input type="password" name="user_pwd"<br>
+    비밀번호 <input type="password" name="user_pwd"><br>
+    <input type="checkbox" name="save_id" value="false">아이디 저장
+    <br>
+    <input type="button" value="아이디 찾기" name="find_id" onclick="find_id()">
+    <input type="button" value="비밀번호 찾기" name="find_pwd" onclick="find_pwd()">
+    <br>
     <input type="submit" value="로그인">
+
 </form>
 </body>
+
 
 <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script>
@@ -35,7 +42,6 @@
         })
         return false
     })
-
 </script>
 
 </html>
