--- a/homepage/templates/homepage/join.html
+++ b/homepage/templates/homepage/join.html
@@ -55,9 +55,65 @@
 
 <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script>
+
     var doc = document;
     var form2 = doc.getElementById('form2');
     var inputs = form2.getElementsByTagName('INPUT');
+
+    var id_confirm = ''
+    var nick_confirm = ''
+
+
+    //아이디 중복 확인
+
+    function ID_check() {
+        user_id = $('input[name=user_id]').val()
+        ct = $('input[name=csrfmiddlewaretoken]').val()
+        id_confirm = ''
+        $.ajax({
+
+        url:'{% url 'ID_check' %}',
+        type: 'post',
+
+
+        data: {
+            'user_id': user_id,
+            'csrfmiddlewaretoken' : ct,
+            'id_confirm' : id_confirm,
+        },
+
+        success: function(res){
+            alert(res.msg);
+            id_confirm = res.id_confirm
+        }
+
+        })
+    }
+    //닉네임 중복 확인
+        function nick_check() {
+        user_nick = $('input[name=user_nick]').val()
+        ct = $('input[name=csrfmiddlewaretoken]').val()
+        nick_confirm = ''
+
+        $.ajax({
+
+        url:'{% url 'nick_check' %}',
+        type: 'post',
+
+        data: {
+            'user_nick': user_nick,
+            'csrfmiddlewaretoken' : ct,
+            'nick_confirm' : nick_confirm,
+        },
+
+        success: function(res){
+            alert(res.msg);
+            nick_confirm = res.nick_confirm
+        }
+
+        })
+    }
+
 
 	form2.onsubmit = function(e) {
 	    e.preventDefault();
@@ -95,6 +151,19 @@
             return false;
             }
             }
+        if (id_confirm != 'undefined') {  //중복검사확인
+            if (id_confirm == "") {
+            alert("아이디 중복검사를 실시해 주세요.");
+            return false;
+            }
+            }
+        if (nick_confirm != 'undefined') {  //중복검사확인
+            if (nick_confirm == "") {
+            alert("닉네임 중복검사를 실시해 주세요.");
+            return false;
+            }
+            }
+
         else {
             return false;
         }
@@ -103,47 +172,7 @@
 	}
 
 
-    //아이디 중복 확인
 
-    function ID_check() {
-        user_id = $('input[name=user_id]').val()
-        ct = $('input[name=csrfmiddlewaretoken]').val()
-        $.ajax({
-
-        url:'{% url 'ID_check' %}',
-        type: 'post',
-
-        data: {
-            'user_id': user_id,
-            'csrfmiddlewaretoken' : ct
-        },
-
-        success: function(res){
-            alert(res.msg)
-        }
-
-        })
-    }
-    //닉네임 중복 확인
-        function nick_check() {
-        user_nick = $('input[name=user_nick]').val()
-        ct = $('input[name=csrfmiddlewaretoken]').val()
-        $.ajax({
-
-        url:'{% url 'nick_check' %}',
-        type: 'post',
-
-        data: {
-            'user_nick': user_nick,
-            'csrfmiddlewaretoken' : ct
-        },
-
-        success: function(res){
-            alert(res.msg)
-        }
-
-        })
-    }
 
 
 </script>
